--- a/playground/css/theme.less
+++ b/playground/css/theme.less
@@ -1,9 +1,160 @@
-/**
- *  Agile Toolkit CSS Framework (c) 2013-2014 v0.904
- *  http://www4.agiletoolkit.org/css
- *  Theme: Playground (Based on default)
- */
 
-@import '/less/agiletoolkit.less';
-@import '/css/theme.less';
-@import 'playground.less';
+@import 'less/agiletoolkit.less';
+@import 'fontello.css';
+
+.createViewport(
+    @wrapperMargin: @margin,
+    @colsGutter: @margin,
+    @cols: 12,
+    @viewportMinWidth:769px
+);
+
+.createViewport(@class: 'tablet', @viewportMaxWidth:768px, @cols:6, @colsGutter: 30px, @stackLayout:true, @wrapperMargin: 20px);
+.createViewport(@class: 'mobile', @viewportMaxWidth:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true, @wrapperMargin: 20px);
+
+
+// ==========================================================
+// Typography
+// ==========================================================
+
+@bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
+@bodyColor:            #4c5359;
+@bodySize:             0.875rem; // 14px
+@bodyBaseline:         1.618; // Golden Section
+
+@headingCase:          none; // Options: none, capitalize, uppercase, lowercase
+@headingColor:         #3d4c59;
+@headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
+@headingWeight:        400;
+@headingBaseline:      1.2; // Minor Third
+
+@fontScatter:          0.5; // Multiplier that affects difference between heading sizes
+
+
+// ==========================================================
+// Styles & Colors
+// ==========================================================
+
+@bodyBackground:       #fff;
+
+@cornerRadius:         5px;
+
+@textSelect:           @atk-swatch-ink; // Text selection's color
+@textDimmed:           40%;
+
+@blur:                 5px; // Effect .atk-blur can be applied on any element.
+
+@borderStatic:         #dadde0;
+@borderClickable:      darken(@borderStatic, 10%);
+@borderOverlay:        darken(@borderStatic, 25%);
+
+@atk-swatch-white:     #ffffff;     .createSwatch(atk-swatch-white);
+@atk-swatch-gray:      #f5f6f7;     .createSwatch(atk-swatch-gray);
+@atk-swatch-ink:       #1c2933;     .createSwatch(atk-swatch-ink);
+@atk-swatch-yellow:    #ffcc00;     .createSwatch(atk-swatch-yellow);
+@atk-swatch-red:       #f9451f;     .createSwatch(atk-swatch-red);
+@atk-swatch-green:     #00cc66;     .createSwatch(atk-swatch-green);
+@atk-swatch-blue:      #0095ff;     .createSwatch(atk-swatch-blue);
+@swatchText:           50%; // Text color sensitivity based on swatch
+
+@effectSuccess:        #25c425;
+@effectWarning:        #f7a600;
+@effectDanger:         #ff2d1a;
+@effectInfo:           #2bacd7;
+
+
+// ==========================================================
+// Components & Widgets
+// ==========================================================
+
+@linkColor:            darken(@atk-swatch-blue,10%);
+@linkColorHover:       darken(@linkColor,10%);
+
+@dialogOverlay:        fade(#000, 25%); // Color of modal dialog's overlay
+
+@tooltipColor:         fade(@atk-swatch-ink, 90%);
+
+@menuActive:           @atk-swatch-blue;
+
+@buttonDefault:        #fff;
+@buttonHover:          #f5f5f5;
+@buttonActive:         #eee;
+
+@boxColor:             #fff;
+
+@formMandatory:        #ff0000;
+
+@hoverIntensity:       3%;
+
+@textDimmed:           desaturate(lighten(@bodyColor, 25%), 2%);
+
+@inputFocus:           @atk-swatch-blue;
+@inputPlaceholder:     lighten(@bodyColor, 40%);
+
+@popoverArrow:         12px;
+
+
+// ==========================================================
+// Custom Playground Code
+// ==========================================================
+
+
+@bodyBackground: @atk-swatch-gray;
+
+#atk-footer {
+    border-top: 1px solid @borderStatic;
+}
+
+section {
+    margin-top: @margin*3;
+    h2:first-child {
+        border-bottom: 1px solid @borderStatic;
+        color: darken(@borderStatic, 10%);
+        font-weight: 300;
+    }
+    &:first-child {
+        margin-top: 0;
+    }
+}
+
+#example-swatches {
+    .row + .row {
+        margin-top: 1em;
+    }
+}
+#example-effects-box {
+    .atk-box-small {
+        margin-bottom: 0;
+    }
+}
+#example-styling-shapes {
+    .atk-padding {
+        height: 100px;
+        width: 100%;
+        &.atk-shape-circle {
+            width: 100px;
+        }
+    }
+}
+#example-icons {
+    #icons-library {
+        white-space: nowrap;
+    }
+    #toggler {
+        display: block;
+    }
+    .i-code {
+        display: none;
+    }
+}
+
+#example-widgets-mediablocks {
+    img {
+        height: 100px;
+    }
+}
+
+#example-widgets-popover .atk-row>.atk-col-4>.atk-box>*[class*=atk-popover] {
+    position: relative;
+}
+
